# psi-cli

./: Cargo.toml  README.md
examples/scripts/: on-output.sh  on-startup.sh  on-submit.sh
src/: main.rs
src/cli/: mod.rs
src/models/: mod.rs
src/scriptlet/: mod.rs
src/tui/: mod.rs
src/watcher/: mod.rs
